--- a/about-us.htm
+++ b/about-us.htm
@@ -128,16 +128,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-124798.htm" title="V2RayNG 32位全攻略：从零开始掌握高效代理工具">V2RayNG 32位全攻略：从零开始掌握高效代理工具</a></li>
+                        <li class="py-2"><a href="/news/article-135658.htm" title="第一次科学上网全攻略：从零开始解锁全球互联网">第一次科学上网全攻略：从零开始解锁全球互联网</a></li>
+                        <li class="py-2"><a href="/news/article-123845.htm" title="手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南">手机热点与V2Ray强强联合：打造高速安全移动上网的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-127799.htm" title="突破网络限制：Surfboard全方位翻墙指南与深度体验报告">突破网络限制：Surfboard全方位翻墙指南与深度体验报告</a></li>
+                        <li class="py-2"><a href="/news/article-134100.htm" title="科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南">科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南</a></li>
                         <li class="py-2"><a href="/news/article-136467.htm" title="V2Ray突然失效？从入门到精通的全方位排错手册">V2Ray突然失效？从入门到精通的全方位排错手册</a></li>
                         <li class="py-2"><a href="/news/article-126798.htm" title="苹果Shadowrocket终极使用指南：从入门到精通">苹果Shadowrocket终极使用指南：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-130917.htm" title="手机B站科学上网失效的深层原因与实用解决方案全解析">手机B站科学上网失效的深层原因与实用解决方案全解析</a></li>
-                        <li class="py-2"><a href="/news/article-132335.htm" title="从零开始掌握Clash：打造稳定免费的全局代理方案">从零开始掌握Clash：打造稳定免费的全局代理方案</a></li>
-                        <li class="py-2"><a href="/news/article-134100.htm" title="科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南">科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南</a></li>
-                        <li class="py-2"><a href="/news/article-123207.htm" title="突破封锁的艺术：Trojan与V2Ray速度优化全攻略">突破封锁的艺术：Trojan与V2Ray速度优化全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-126467.htm" title="深度解析：V2RayNG连接无反应的全面诊断与修复指南">深度解析：V2RayNG连接无反应的全面诊断与修复指南</a></li>
-                        <li class="py-2"><a href="/news/article-125143.htm" title="突破网络边界：科学上网代理插件的终极使用手册">突破网络边界：科学上网代理插件的终极使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-136823.htm" title="解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南">解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-130225.htm" title="在Padavan路由器上搭建vmess代理：从入门到精通的完整指南">在Padavan路由器上搭建vmess代理：从入门到精通的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-128490.htm" title="轻云V2Ray节点完全指南：从入门到精通的安全代理配置">轻云V2Ray节点完全指南：从入门到精通的安全代理配置</a></li>
+                        <li class="py-2"><a href="/news/article-124798.htm" title="V2RayNG 32位全攻略：从零开始掌握高效代理工具">V2RayNG 32位全攻略：从零开始掌握高效代理工具</a></li>
                     </ul>
     </div>
 </div>
@@ -149,7 +149,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
